--- a/index.html
+++ b/index.html
@@ -239,4 +239,13 @@
 
   <button type="submit">Wyślij zgłoszenie</button>
 </form>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const urlField = document.createElement("input");
+    urlField.type = "hidden";
+    urlField.name = "page_url";
+    urlField.value = window.location.href; // pełny adres aktualnej strony
+    document.querySelector("form").appendChild(urlField);
+  });
+</script>
 
