Add hidden input for page URL in index.html

--- a/index.html
+++ b/index.html
@@ -248,4 +248,5 @@
     document.querySelector("form").appendChild(urlField);
   });
 </script>
+<input type="hidden" name="page_url" value="https://kamil1402.github.io/aitickets-pro/">
 
